[package]
name = "tencentcloud-sdk"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
percent-encoding = "2.3.1"
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2"
ring = "0.17.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.30"
sha2 = "0.10"
strum = { version = "0.25.0", features = ["derive"] }
task-local-extensions = "0.1"
thiserror = "1.0"
time = { version = "0.3", features = ["macros", "serde-well-known"] }
tokio = { version = "1.33", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.6", features = ["serde", "v4"] }